--- a/Curso_FireBase/css/style.css
+++ b/Curso_FireBase/css/style.css
@@ -58,3 +58,10 @@ p{
 .alternative{
     background-color: #44c;
 }
+
+#loading{
+    position: absolute;
+    top: calc(50% - 100px);
+    left: calc(50% - 100px);
+    z-index: 1; /*garante que o elemento ficara sobrepondo os outros elementos */
+}
